ruma-events/tests/ui/06-no-content-field.stderr
error: struct must contain a `content` field
 --> $DIR/06-no-content-field.rs:5:24
  |
5 | #[derive(Clone, Debug, Event)]
  |                        ^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
